[package]
name = "kemono-api"
version = "0.1.0"
edition = "2021"
license = "MIT"

[dependencies]
anyhow = { version = "1", default-features = false }
http = "1.3.1"
nyquest = { version = "0.2.0", features = ["async", "json"] }
serde = { version = "1", features = ["derive"], default-features = false }
serde_json = "1"
url = "2.5.4"
