[package]
name = "kemono-cli"
version = "0.1.0"
edition = "2021"
license = "MIT"

[dependencies]
anyhow = { version = "1", default-features = false }

tokio = { version = "1", features = [
    "macros",
    "rt-multi-thread",
    "io-util",
    "fs",
    "time",
    "sync",
], default-features = false }

ctrlc = "3"

argh = "0.1.13"
derive_builder = "0.20.2"
regex = { version = "1", default-features = false, features = ["unicode"] }
kdam = { version = "0.6.2", features = ["rich", "spinner", "unicode"] }

kemono-api = { path = "../kemono-api" }
chrono = "0.4.41"
futures-util = { version = "0.3.31", features = ["io"] }
nyquest-preset = { version = "0.3.0", features = ["async"] }
tracing-subscriber = { version = "0.3.20", features = [
    "env-filter",
    "registry",
] }
tracing = { version = "0.1.41" }
